syntax = "proto3";

service currency {
  rpc getRate (RateRequest) returns (RateResponse);
}

message RateRequest {
  string Base = 1;
  string Destination = 2;
}

message RateResponse {
  float Rate = 1;
}